# testapilinterfp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
.github/workflows/: CI.yaml
app/: main.py
test/: sum_test.py  test_app.py
