[tool.poetry]
name = "testapilinterfp"
version = "0.1.0"
description = ""
authors = ["juanj72 <juan.jara@campusucc.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pre-commit = "^4.1.0"
pytest = "^8.3.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
